test_src/compiler_errors/types/arithmetic/MultiplyBoolError3.b
class MultiplyBoolError3 {
    void test() {
        Int value = 2;
        println(value *= false);
    }
}
